--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "q": "^1.4.1",
     "serve-favicon": "~2.2.0",
     "socket.io": "^1.3.2",
-    "stripe": "^4.1.0"
+    "stripe": "^4.1.0",
+    "request": "~2.55.0"
   },
   "devDependencies": {
     "grunt": "~0.4.5",
