--- a/web-app/bower.json
+++ b/web-app/bower.json
@@ -10,7 +10,8 @@
     "restangular": "~1.4.0",
     "bootstrap": "~3.2.0",
     "angular-bootstrap": "~0.13.0",
-    "angular-socket-io": "^0.7.0"
+    "angular-socket-io": "^0.7.0",
+    "webrtc-adapter": "^2.0.2"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.15"
